--- a/Examples/LogisticRegression/notebook/LogisticRegressionApp.ipynb
+++ b/Examples/LogisticRegression/notebook/LogisticRegressionApp.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# <center> Classifying Handwritten Digits <br/> with <br/> Logistic Regression </center>\n",
     "\n",
-    "<img style=\"float: center; width: 450px; height: 100px;\" src=\"https://kaggle2.blob.core.windows.net/competitions/kaggle/3004/logos/front_page.png\">\n",
+    "<img style=\"float: center; width: 450px; height: 100px;\" src=\"sample.png\">\n",
     "\n",
     "## Introduction\n",
     "In this notebook an interactive PySpark shell is loaded and our Logistic Regression application is executed, using our accelerated ML library. The accelerated ML library is written in Python. It supports standard learning algorithms, including common settings like classification, regression etc. We are given the option to choose between an accelerated execution that uses both software and hardware and a non-accelerated one, that uses only the CPU cores. Upon choosing the accelerated option, the accelerator's library is invoked (which is also written in Python) where the input data is stored in memory mapped buffers and are then transfered and processed in the PL. The whole communication with the PL is achieved using an AXI4-Stream Accelerator Adapter.\n",
