--- a/Examples/LogisticRegression/notebook/LogisticRegressionApp.ipynb
+++ b/Examples/LogisticRegression/notebook/LogisticRegressionApp.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div align = center>FPGA-ACCELERATION OF MACHINE LEARNING APPLICATIONS USING APACHE SPARK <br/> A USE CASE SCENARIO ON LOGISTIC REGRESSION </div>\n",
+    "#### <div align=center> FPGA-ACCELERATION OF MACHINE LEARNING APPLICATIONS USING APACHE SPARK <br/> A USE CASE SCENARIO ON LOGISTIC REGRESSION <div/>\n",
     "\n",
     "# <center> Classifying Handwritten Digits <br/> with <br/> Logistic Regression </center>\n",
     "\n",
